Improved and extended redirectUrl caching. Added expiration for URL records
